# rs-k8s-sync

./: Cargo.toml  README.md
src/: errors.rs  kubernetes.rs  lib.rs
src/config/: mod.rs  utils.rs
src/config_backup/: apis.rs  exec.rs  incluster_config.rs  kube_config.rs  mod.rs  utils.rs
tests/: integration_test.rs
tests/fixtures/: kubeconfig
