[package]
edition = "2018"
name = "k8s-sync"
description = "Minimalistic, synchronous, read-only client for kubernetes cluster API, from a node, through local api server endpoint"
version = "0.2.2"
authors = ["Benoit Petit <bpetit@hubblo.org>"]
license = "Apache-2.0"
homepage = "https://github.com/bpetit/rs-k8s-sync"
repository = "https://github.com/bpetit/rs-k8s-sync"
documentation = "https://docs.rs/k8s-sync"
readme = "README.md"
keywords = ["kubernetes", "k8s", "containers"]

[dependencies]
isahc = { version = "1.4.0", features = ["default", "json"] }
http = "0.2.4"
k8s-openapi = { version = "0.13.0", features = ["v1_21"] }
serde = { version = "1.0.127", features = ["derive"] }
serde_yaml = "0.8.17"
base64 = "0.13.0"
chrono = "0.4.19"
dirs = "3.0.2"
tempfile = "3.2.0"
